# temp

./: .clang-format  .gitignore  Doxyfile  external_tools.fish  prebuild.fish  prjdef  setup.fish
anima/src/: ecs.hpp
benchmark/integration/: traversal.cpp
benchmark/unit/: string_dispatch.cpp  strings_declaration.h
boilerplate/: prjdef
boilerplate/include/boilerplate/: boilerplate.hpp  chrono.hpp  contracts.hpp  fmt.hpp  leaf.hpp  likely.hpp  logger.hpp  mem_utils.hpp  piped_continuation.hpp  pointers.hpp  qsbr.h  ranges.hpp  socket.hpp  spsc_ring_buffer.hpp  std.hpp  x3.hpp
contrib/: prjdef
contrib/notebook/: Untitled.ipynb  trigger_helper.cpp  trigger_helper.hpp
contrib/pcap/: capture.fish  parse_pcap.py
contrib/production/: catchall.sh  hugetlb.sh  mlockall.sh
contrib/production/logging/: rsyslogd.conf  rsyslogd.sh
contrib/production/mlockall/: mlockall.cpp
contrib/production/smartbulb/: smartbulb.cpp
contrib/production/tsc_calibrate/: tsc_calibrate.cpp
doc/: build_google_benchmark  fairy  guidelines  ppf.puml  todo
down/: down.py
down/include/down/: down.hpp
down/test/: hitter.cpp
dust/: external_tools.fish  gcovr.cfg  prjdef  watch.fish
dust/benchmark/integration/: traversal.cpp
dust/benchmark/unit/: string_dispatch.cpp
dust/resource/: default.conf
dust/src/: handlers.hpp  main.cpp
dust/src/config/: config_reader.hpp  dispatch.hpp  walker.hpp
dust/src/model/: automata.hpp  payload.hpp  wiring.hpp
dust/src/trigger/: trigger.hpp  trigger_dispatcher.hpp
dust/test/properties/: backtest_harness.hpp  config_properties.cpp  fuzz_test_harness.hpp  fuzzed.cpp
feed/: external_tools.fish  prjdef
feed/include/feed/: decimal.hpp  feed.hpp  feed_binary.hpp  feed_fields.hpp  feed_server.hpp  feed_structures.hpp  feedlib.h  feedlibpp.hpp  sparse_instrument_state.hpp
feed/include/feed/binary/: feed_binary.hpp  feed_server.hpp
feed/include/feed/rtsdk/: decode.hpp
feed/python/feed/: feed.py
feed/scripts/: scenario_maker.py
feed/src/: feedlib.cpp
feedlib/: external_tools.fish  prjdef
feedlib/include/feed/: feedlib.h  feedlibpp.hpp
feedlib/python/feed/: feed.py
feedlib/python/feed/entrypoints/: pcap_decoder.py
feedlib/src/: feedlib.cpp  player.cpp
feedlib/test/: main.cpp  test_feedlib.cpp
gdb/: coroutines.py  gdb_session
include/boilerplate/: asio.hpp  boilerplate.hpp  builtin_expect.hpp  chrono.hpp  contracts.hpp  counters.hpp  fmt.hpp  leaf.hpp  logger.hpp  mem_utils.hpp  outcome.hpp  piped_continuation.hpp  ranges.hpp  socket.hpp  spsc_ring_buffer.hpp  std.hpp  time.hpp  type_traits.hpp  units.hpp  x3.hpp
notebook/: Untitled.py  trigger_helper.cpp  trigger_helper.hpp
playground/: leaf_coro.cpp  prjdef  writev.cpp  writev.sh
ppf/: __main__.py  build.ninja  build.ninja.d  config_grammar.py  ppf.conf  ppf.py  prjdef  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
ppf/ppf/: __main__.py  config.py  config_objects.py  config_reader.py  ppf.py  typed_walker.py
ppf/ppf/config/: base.py  marshalling.py  typed_walker.py  types.py  walker.py
ppf/test/: down.py  gen_scenarios.py  integration.conf  integration_dynamic.conf  test_config.py  test_pipo.py  tori.py  up.cpp  up.hpp  up.py
ppf/test/resources/: integration.conf  integration_dynamic.conf
ppf/tests/: down.py  integration.conf  test_pipo.py  tori.py  up.cpp  up.py
pyfeedlib/: capture.fish  multicast_loopback.fish  setup.cfg  setup.py  setup_multicast.fish
pyfeedlib/feed/: __init__.py  feed.py  feed_cffi.py
pyfeedlib/feed/entrypoints/: pcap_decoder.py  player.py
pyfeedlib/test/: test_encoder.py
scripts/: bind.sh  hugetlb.sh
scripts/smartbulb/: .gdb_history  smartbulb.cpp
src/: handlers.hpp  main.cpp
src/common/: config_reader.hpp  properties_dispatch.hpp  socket.hpp  walker.hpp
src/config/: config_reader.hpp  dispatch.hpp  walker.hpp
src/feed/: feed.hpp  feed_binary.hpp  feed_fields.hpp  feed_server.hpp  feed_structures.hpp  feed_text.hpp
src/model/: automata.hpp  payload.hpp  wiring.hpp
src/trigger/: trigger.hpp  trigger_dispatcher.hpp
test/integration/: down.py  integration.conf  main.py  tori.py  up.cpp  up.hpp  up.py
test/properties/: backtest_harness.hpp  feed_text_mutator.cpp  fuzz_input_generator.cpp  fuzz_test_harness.hpp  fuzzed.cpp  invariants.hpp  mutator.h
test/unit/: log_main.cpp  overloaded_piped_continuation.cpp  starter.cpp
toothpaste/: requirements.txt  setup.cfg  tox.ini
toothpaste/test/: simple.py
toothpaste/toothpaste/: mypy.py  typed_walker.py  types.py  walker.py
toothpaste/toothpaste/contrib/mypy/: walker_type.py
toothpaste/toothpaste/mypy/: toothpaste.py  walker_type.py
tori/tori/: __main__.py
