[metadata]
name = ppf 
version = attr:ppf.__version__

[options]
install_requires = pyparsing 
#setup_requires = pytest-runner; sphinx; sphinx_bootstrap_theme; m2r; breathe
#tests_require = pytest; pytest-html; pytest-cov; pytest-codestyle; pytest-docstyle; pytest-pep8; pytest-pylint; pprofile
packages = find:
zip_safe = False
include_package_data = True
python_requires = ~=3.8

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts = ppf=ppf.ppf:main

[aliases]
test = pytest
doc = build_sphinx
release = check clean --all build_sphinx sdist bdist_wheel

[test]
test_suite = tests/ppf.py

[tool:pytest]
pep8maxlinelength = 238
docstyle_convention = pep257
addopts =
  --verbose
  --pep8
  --html=reports/unit_tests.html --self-contained-html
  --cov . --cov-report html:reports/coverage --cov-config .coveragerc
  --profile reports/profile
  --codestyle
  --docstyle
  --pylint --pylint-rcfile=pylintrc

[pycodestyle]
max-line-length = 238
in-place = True
aggressive = 2

[pydocstyle]

