[metadata]
name = feed
version = attr:feed.__version__

[options]
install_requires = cffi; pcpp
packages = find:
zip_safe = False
include_package_data = True
python_requires = ~=3.9
#cffi_modules = feed/feed_cffi.py:ffi

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts = player=feed.entrypoints.player:main, pcap_decoder=feed.entrypoints.pcap_decoder:main

[aliases]
test = pytest
doc = pdoc --html --output-dir=doc/generated .
release = check clean --all build_sphinx sdist bdist_wheel

[test]
test_suite = tests/test.py

[tool:pytest]
addopts =
  --verbose
#  --pep8
  --html=build/reports/unit_tests.html --self-contained-html
  --cov . --cov-report html:build/reports/coverage --cov-config .coveragerc
#  --profile build/reports/profile
  --pycodestyle
  --pydocstyle
  --pylint --pylint-rcfile=pylintrc
#  --mypy

[pycodestyle]
max-line-length = 238
in-place = True
aggressive = 2

[pydocstyle]
